# ktextwidgets

./: .git-blame-ignore-revs  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5TextWidgetsConfig.cmake.in  KF6TextWidgetsConfig.cmake.in  README.md  metainfo.yaml
autotests/: CMakeLists.txt  kfindtest.cpp  kfindtest.h  kpluralhandlingspinboxtest.cpp  kpluralhandlingspinboxtest.h  kreplacetest.cpp  kreplacetest.h  krichtextedittest.cpp  krichtextedittest.h  ktextedit_unittest.cpp
docs/: Doxyfile.local
po/af/: ktextwidgets5.po  ktextwidgets6.po
po/ar/: ktextwidgets5.po  ktextwidgets6.po
po/as/: ktextwidgets5.po  ktextwidgets6.po
po/ast/: ktextwidgets5.po  ktextwidgets6.po
po/az/: ktextwidgets5.po  ktextwidgets6.po
po/be/: ktextwidgets5.po  ktextwidgets6.po
po/be@latin/: ktextwidgets5.po  ktextwidgets6.po
po/bg/: ktextwidgets5.po  ktextwidgets6.po
po/bn/: ktextwidgets5.po  ktextwidgets6.po
po/bn_IN/: ktextwidgets5.po  ktextwidgets6.po
po/br/: ktextwidgets5.po  ktextwidgets6.po
po/bs/: ktextwidgets5.po  ktextwidgets6.po
po/ca/: ktextwidgets5.po  ktextwidgets6.po
po/ca@valencia/: ktextwidgets5.po  ktextwidgets6.po
po/crh/: ktextwidgets5.po  ktextwidgets6.po
po/cs/: ktextwidgets5.po  ktextwidgets6.po
po/csb/: ktextwidgets5.po  ktextwidgets6.po
po/cy/: ktextwidgets5.po  ktextwidgets6.po
po/da/: ktextwidgets5.po  ktextwidgets6.po
po/de/: ktextwidgets5.po  ktextwidgets6.po
po/el/: ktextwidgets5.po  ktextwidgets6.po
po/en_GB/: ktextwidgets5.po  ktextwidgets6.po
po/eo/: ktextwidgets5.po  ktextwidgets6.po
po/es/: ktextwidgets5.po  ktextwidgets6.po
po/et/: ktextwidgets5.po  ktextwidgets6.po
po/eu/: ktextwidgets5.po  ktextwidgets6.po
po/fa/: ktextwidgets5.po  ktextwidgets6.po
po/fi/: ktextwidgets5.po  ktextwidgets6.po
po/fr/: ktextwidgets5.po  ktextwidgets6.po
po/fy/: ktextwidgets5.po  ktextwidgets6.po
po/ga/: ktextwidgets5.po  ktextwidgets6.po
po/gd/: ktextwidgets5.po  ktextwidgets6.po
po/gl/: ktextwidgets5.po  ktextwidgets6.po
po/gu/: ktextwidgets5.po  ktextwidgets6.po
po/ha/: ktextwidgets5.po  ktextwidgets6.po
po/he/: ktextwidgets5.po  ktextwidgets6.po
po/hi/: ktextwidgets5.po  ktextwidgets6.po
po/hne/: ktextwidgets5.po  ktextwidgets6.po
po/hr/: ktextwidgets5.po  ktextwidgets6.po
po/hsb/: ktextwidgets5.po  ktextwidgets6.po
po/hu/: ktextwidgets5.po  ktextwidgets6.po
po/hy/: ktextwidgets5.po  ktextwidgets6.po
po/ia/: ktextwidgets5.po  ktextwidgets6.po
po/id/: ktextwidgets5.po  ktextwidgets6.po
po/is/: ktextwidgets5.po  ktextwidgets6.po
po/it/: ktextwidgets5.po  ktextwidgets6.po
po/ja/: ktextwidgets5.po  ktextwidgets6.po
po/ka/: ktextwidgets5.po  ktextwidgets6.po
po/kk/: ktextwidgets5.po  ktextwidgets6.po
po/km/: ktextwidgets5.po  ktextwidgets6.po
po/kn/: ktextwidgets5.po  ktextwidgets6.po
po/ko/: ktextwidgets5.po  ktextwidgets6.po
po/ku/: ktextwidgets5.po  ktextwidgets6.po
po/lb/: ktextwidgets5.po  ktextwidgets6.po
po/lt/: ktextwidgets5.po  ktextwidgets6.po
po/lv/: ktextwidgets5.po  ktextwidgets6.po
po/mai/: ktextwidgets5.po  ktextwidgets6.po
po/mk/: ktextwidgets5.po  ktextwidgets6.po
po/ml/: ktextwidgets5.po  ktextwidgets6.po
po/mr/: ktextwidgets5.po  ktextwidgets6.po
po/ms/: ktextwidgets5.po  ktextwidgets6.po
po/nb/: ktextwidgets5.po  ktextwidgets6.po
po/nds/: ktextwidgets5.po  ktextwidgets6.po
po/ne/: ktextwidgets5.po  ktextwidgets6.po
po/nl/: ktextwidgets5.po  ktextwidgets6.po
po/nn/: ktextwidgets5.po  ktextwidgets6.po
po/oc/: ktextwidgets5.po  ktextwidgets6.po
po/or/: ktextwidgets5.po  ktextwidgets6.po
po/pa/: ktextwidgets5.po  ktextwidgets6.po
po/pl/: ktextwidgets5.po  ktextwidgets6.po
po/ps/: ktextwidgets5.po  ktextwidgets6.po
po/pt/: ktextwidgets5.po  ktextwidgets6.po
po/pt_BR/: ktextwidgets5.po  ktextwidgets6.po
po/ro/: ktextwidgets5.po  ktextwidgets6.po
po/ru/: ktextwidgets5.po  ktextwidgets6.po
po/sa/: ktextwidgets6.po
po/se/: ktextwidgets5.po  ktextwidgets6.po
po/si/: ktextwidgets5.po  ktextwidgets6.po
po/sk/: ktextwidgets5.po  ktextwidgets6.po
po/sl/: ktextwidgets5.po  ktextwidgets6.po
po/sq/: ktextwidgets5.po  ktextwidgets6.po
po/sr/: ktextwidgets5.po  ktextwidgets6.po
po/sr@ijekavian/: ktextwidgets5.po  ktextwidgets6.po
po/sr@ijekavianlatin/: ktextwidgets5.po  ktextwidgets6.po
po/sr@latin/: ktextwidgets5.po  ktextwidgets6.po
po/sv/: ktextwidgets5.po  ktextwidgets6.po
po/ta/: ktextwidgets5.po  ktextwidgets6.po
po/te/: ktextwidgets5.po  ktextwidgets6.po
po/tg/: ktextwidgets5.po  ktextwidgets6.po
po/th/: ktextwidgets5.po  ktextwidgets6.po
po/tr/: ktextwidgets5.po  ktextwidgets6.po
po/tt/: ktextwidgets5.po  ktextwidgets6.po
po/ug/: ktextwidgets5.po  ktextwidgets6.po
po/uk/: ktextwidgets5.po  ktextwidgets6.po
po/uz/: ktextwidgets5.po  ktextwidgets6.po
po/uz@cyrillic/: ktextwidgets5.po  ktextwidgets6.po
po/vi/: ktextwidgets5.po  ktextwidgets6.po
po/wa/: ktextwidgets5.po  ktextwidgets6.po
po/x-test/: ktextwidgets5.po
po/xh/: ktextwidgets5.po  ktextwidgets6.po
po/zh_CN/: ktextwidgets5.po  ktextwidgets6.po
po/zh_HK/: ktextwidgets5.po  ktextwidgets6.po
po/zh_TW/: ktextwidgets5.po  ktextwidgets6.po
src/: CMakeLists.txt  Messages.sh  ktextwidgets-index.qdoc  ktextwidgets.qdoc  ktextwidgets.qdocconf
src/designer/: CMakeLists.txt
src/dialogs/: klinkdialog.cpp  klinkdialog_p.h
src/findreplace/: kfind.cpp  kfind.h  kfind_p.h  kfinddialog.cpp  kfinddialog.h  kfinddialog_p.h  kreplace.cpp  kreplace.h  kreplacedialog.cpp  kreplacedialog.h
src/kregexpeditor/: kregexpeditorinterface.h
src/widgets/: kpluralhandlingspinbox.cpp  kpluralhandlingspinbox.h  krichtextedit.cpp  krichtextedit.h  krichtextedit_p.h  krichtextwidget.cpp  krichtextwidget.h  ktextedit.cpp  ktextedit.h  ktextedit_p.h  nestedlisthelper.cpp  nestedlisthelper_p.h
tests/: CMakeLists.txt  ktextedittest.cpp
